--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+/* Variabes */
+
+body {
+  background-color: lightgrey;
+  font-size: 100px;
   text-align: center;
+  margin-left: 20px;
+  font-style: helvetica;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+button {
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  background-color: none;
+  font-weight:bold;
+  border-radius: 50%;
+  padding: 50px;
+  text-align: center;
+  display: inline-block;
+  font-size: 24px;
+  margin: 4px 8px;
 }
 
-.App-link {
-  color: #61dafb;
+#split-list {
+  color:orange;
+  font-size:30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul.no-bullets {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#msb_lsb {
+  font-size:50px;
+  color: blue;
+}
+
+#secondary-display {
+  color: orange;
+  font-weight:bold;
+  font-size:30px;
+  margin-left: 35%;
+  text-align:left;
+}
+
+
+#container {
+  display: grid;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-item {
+  text-align: center;
+  font-size: 30px;
+}
+
+.disable-btn {
+  background-color: lightgray;
+}
+
+.enable-split-btn {
+  background-color: orange;
+}
+
+.enable-reset-btn {
+  background-color: blue;
+}
+
+.enable-start-btn {
+  background-color:green;
+}
+
+.enable-pause-btn {
+  background-color:purple;
+}
+
+.magenta-text {
+  color: magenta;
+}
+
+.orange-text {
+  color: orange;
+}
+
+.gray-text {
+  color: gray;
 }
