--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ ul.no-bullets {
   color: blue;
 }
 
-#secondary-display {
+.secondary-display {
   color: orange;
   font-weight:bold;
   font-size:30px;
