--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,13 @@ ul.no-bullets {
   text-align:left;
 }
 
+.button-actions {
+  display: inline-flex;
+  margin-bottom: 50px;
+}
 
-#container {
+
+.grid-container {
   display: grid;
   grid-template-rows: repeat(1, 1fr);
   grid-template-columns: repeat(3, 1fr);
@@ -54,7 +59,7 @@ ul.no-bullets {
 
 .grid-item {
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .disable-btn {
